# telemeter_tgbot

./: .gitignore  CMakeLists.txt  README.md  library.json  platformio.ini  sdkconfig.esp32dev
lib/command/: command.cpp  command.h
lib/project_config/: project_config.h
lib/secrets_example/: secrets.h
lib/sensors/: sensors.cpp  sensors.h
src/: CMakeLists.txt  main.cpp
